--- a/styles.css
+++ b/styles.css
@@ -263,19 +263,11 @@ section h2 {
 
 /* Contato */
 
-#contact {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-}
-
-
 .contact-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    margin: 0;
+    height: 70vh;
     align-items: center;
     justify-content: center;
 }
@@ -353,5 +345,7 @@ footer {
     .contact-container {
         flex-direction: column;
         align-items: center;
+        height: 130vh;
+        justify-content: center;
     }
 }
